--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,1 +1,2 @@
-@import "base/reset", "base/global", "components/header";
+@import "base/reset", "base/global", "components/header",
+  "components/mobile-menu";
